# marl-games

./: .gitignore  PROJECT_STATUS.md  README.md  main.py  pyproject.toml
frontend/: biome.json  eslint.config.mjs  package-lock.json  package.json
frontend/app/: page.tsx
frontend/components/game/: ChessBoard.tsx  ConnectFourBoard.tsx  TicTacToeBoard.tsx
frontend/components/ui/: button.tsx  card.tsx  select.tsx
frontend/lib/: api-client.ts
marl_games.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/backend/: game_manager.py  main.py  models.py
src/backend/tests/: test_game_manager.py
src/chess/: main.py
src/connect_four/: main.py
src/lib/: ppo.py  utils.py
src/tictactoe/: main.py
