[project]
name = "marl-games"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pettingzoo>=1.25.0",
    "pygame>=2.6.1",
    "sb3-contrib>=2.7.0",
    "stable-baselines3>=2.7.0",
]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
